added new models

--- a/Machine-Learning-Books/Hands-On-Machine-Learning/Part-1-Basics.ipynb
+++ b/Machine-Learning-Books/Hands-On-Machine-Learning/Part-1-Basics.ipynb
@@ -89,6 +89,46 @@
     "model.fit(housing[[\"median_income\"]], housing_labels)\n",
     "predictions = model.predict(some_new_data)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### For transformations that don’t require any training, you can just write a function that takes a NumPy array as input and outputs the transformed array. For example, as discussed in the previous section, it’s often a good idea to transform features with heavy-tailed distributions by replacing them with their logarithm (assuming the feature is positive and the tail is on the right). Let’s create a log-transformer and apply it to the population feature:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import FunctionTransformer\n",
+    "\n",
+    "log_transformer = FunctionTransformer(np.log, inverse_func=np.exp)\n",
+    "log_pop = log_transformer.transform(housing[[\"population\"]])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Since listing all the column names is not very convenient, Scikit-Learn provides a make_column_selector() function that returns a selector function you can use to automatically select all the features of a given type, such as numerical or categorical. You can pass this selector function to the ColumnTransformer instead of column names or indices. Moreover, if you don’t care about naming the transformers, you can use make_column_transformer(), which chooses the names for you, just like make_pipeline() does. For example, the following code creates the same ColumnTransformer as earlier, except the transformers are automatically named \"pipeline-1\" and \"pipeline-2\" instead of \"num\" and \"cat\":"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.compose import make_column_selector, make_column_transformer\n",
+    "\n",
+    "preprocessing = make_column_transformer(\n",
+    "    (num_pipeline, make_column_selector(dtype_include=np.number)),\n",
+    "    (cat_pipeline, make_column_selector(dtype_include=object)),\n",
+    ")"
+   ]
   }
  ],
  "metadata": {
