--- a/Machine-Learning-Books/Hands-On-Machine-Learning/Classification.ipynb
+++ b/Machine-Learning-Books/Hands-On-Machine-Learning/Classification.ipynb
@@ -99,10 +99,177 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.95035, 0.96035, 0.9604 ])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import cross_val_score\n",
+    "cross_val_score(sgd_clf, X_train, y_train_5, cv=3, scoring=\"accuracy\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.dummy import DummyClassifier\n",
+    "\n",
+    "dummy_clf = DummyClassifier()\n",
+    "dummy_clf.fit(X_train, y_train_5)\n",
+    "print(any(dummy_clf.predict(X_train)))  # prints False: no 5s detected"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.90965, 0.90965, 0.90965])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cross_val_score(dummy_clf, X_train, y_train_5, cv=3, scoring=\"accuracy\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.95035\n",
+      "0.96035\n",
+      "0.9604\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import StratifiedKFold\n",
+    "from sklearn.base import clone\n",
+    "\n",
+    "skfolds = StratifiedKFold(n_splits=3)  # add shuffle=True if the dataset is\n",
+    "                                       # not already shuffled\n",
+    "for train_index, test_index in skfolds.split(X_train, y_train_5):\n",
+    "    clone_clf = clone(sgd_clf)\n",
+    "    X_train_folds = X_train[train_index]\n",
+    "    y_train_folds = y_train_5[train_index]\n",
+    "    X_test_fold = X_train[test_index]\n",
+    "    y_test_fold = y_train_5[test_index]\n",
+    "\n",
+    "    clone_clf.fit(X_train_folds, y_train_folds)\n",
+    "    y_pred = clone_clf.predict(X_test_fold)\n",
+    "    n_correct = sum(y_pred == y_test_fold)\n",
+    "    print(n_correct / len(y_pred))  # prints 0.95035, 0.96035, and 0.9604"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.model_selection import cross_val_predict\n",
+    "\n",
+    "y_train_pred = cross_val_predict(sgd_clf, X_train, y_train_5, cv=3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[53892,   687],\n",
+       "       [ 1891,  3530]])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import confusion_matrix\n",
+    "cm = confusion_matrix(y_train_5, y_train_pred)\n",
+    "cm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[54579,     0],\n",
+       "       [    0,  5421]])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_train_perfect_predictions = y_train_5\n",
+    "confusion_matrix(y_train_5, y_train_perfect_predictions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6511713705958311"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import precision_score, recall_score\n",
+    "precision_score(y_train_5, y_train_pred)\n",
+    "recall_score(y_train_5, y_train_pred)  "
+   ]
   }
  ],
  "metadata": {
