--- a/Machine-Learning-Books/Hands-On-Machine-Learning/Classification.ipynb
+++ b/Machine-Learning-Books/Hands-On-Machine-Learning/Classification.ipynb
@@ -477,10 +477,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "\n",
+    "forest_clf = RandomForestClassifier(random_state=42)"
+   ]
   }
  ],
  "metadata": {
