added new visuals

--- a/Machine-Learning-Books/Hands-On-Machine-Learning/Training-Models.ipynb
+++ b/Machine-Learning-Books/Hands-On-Machine-Learning/Training-Models.ipynb
@@ -10,7 +10,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "#### One way to improve an overfitting model is to feed it more training data until the validation error reaches the training error.\n",
+    "\n",
+    "#### An important theoretical result of statistics and machine learning is the fact that a model’s generalization error can be expressed as the sum of three very different errors:"
+   ]
   },
   {
    "cell_type": "code",
