--- a/Machine-Learning-Books/Hands-On-Machine-Learning/Training-Models.ipynb
+++ b/Machine-Learning-Books/Hands-On-Machine-Learning/Training-Models.ipynb
@@ -24,14 +24,21 @@
     "## Irreducible error\n",
     "- This part is due to the noisiness of the data itself. The only way to reduce this part of the error is to clean up the data (e.g., fix the data sources, such as broken sensors, or detect and remove outliers).\n",
     "\n",
-    "#### Increasing a model’s complexity will typically increase its variance and reduce its bias. Conversely, reducing a model’s complexity increases its bias and reduces its variance. This is why it is called a trade-off.\n"
+    "#### Increasing a model’s complexity will typically increase its variance and reduce its bias. Conversely, reducing a model’s complexity increases its bias and reduces its variance. This is why it is called a trade-off.\n",
+    "\n",
+    "## Regularized Linear Models\n",
+    "\n",
+    "#### The fewer degrees of freedom it has, the harder it will be for it to overfit the data. A simple way to regularize a polynomial model is to reduce the number of polynomial degrees.\n",
+    "\n",
+    "#### Ridge regression\n",
+    "-  This forces the learning algorithm to not only fit the data but also keep the model weights as small as possible. Note that the regularization term should only be added to the cost function during training. Once the model is trained, you want to use the unregularized MSE (or the RMSE) to evaluate the model’s performance.\n",
+    "\n",
+    "#### "
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": []
   }
  ],
