added new visuals

--- a/Machine-Learning-Books/Hands-On-Machine-Learning/Support-Vector-Machines.ipynb
+++ b/Machine-Learning-Books/Hands-On-Machine-Learning/Support-Vector-Machines.ipynb
@@ -10,7 +10,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "#### A support vector machine (SVM) is a powerful and versatile machine learning model, capable of performing linear or nonlinear classification, regression, and even novelty detection. SVMs shine with small to medium-sized nonlinear datasets (i.e., hundreds to thousands of instances), especially for classification tasks. However, they don’t scale very well to very large datasets, as you will see.\n"
+   ]
   }
  ],
  "metadata": {
