added new visuals

--- a/Machine-Learning-Books/Hands-On-Machine-Learning/Support-Vector-Machines.ipynb
+++ b/Machine-Learning-Books/Hands-On-Machine-Learning/Support-Vector-Machines.ipynb
@@ -19,7 +19,9 @@
     "\n",
     "#### To avoid these issues, we need to use a more flexible model. The objective is to find a good balance between keeping the street as large as possible and limiting the margin violations (i.e., instances that end up in the middle of the street or even on the wrong side). This is called soft margin classification.\n",
     "\n",
-    "#### When creating an SVM model using Scikit-Learn, you can specify several hyperparameters, including the regularization hyperparameter C. If you set it to a low value, then you end up with the model on the left of Figure 5-4. With a high value, you get the model on the right. As you can see, reducing C makes the street larger, but it also leads to more margin violations. In other words, reducing C results in more instances supporting the street, so there’s less risk of overfitting. But if you reduce it too much, then the model ends up underfitting"
+    "#### When creating an SVM model using Scikit-Learn, you can specify several hyperparameters, including the regularization hyperparameter C. If you set it to a low value, then you end up with the model on the left of Figure 5-4. With a high value, you get the model on the right. As you can see, reducing C makes the street larger, but it also leads to more margin violations. In other words, reducing C results in more instances supporting the street, so there’s less risk of overfitting. But if you reduce it too much, then the model ends up underfitting\n",
+    "\n",
+    "- If your SVM model is overfitting, you can try regularizing it by reducing C.\n"
    ]
   },
   {
