added new visuals

--- a/Machine-Learning-Books/Hands-On-Machine-Learning/Ensemble-Learning.ipynb
+++ b/Machine-Learning-Books/Hands-On-Machine-Learning/Ensemble-Learning.ipynb
@@ -215,7 +215,13 @@
     "\n",
     "#### The random forest algorithm introduces extra randomness when growing trees; instead of searching for the very best feature when splitting a node (see Chapter 6), it searches for the best feature among a random subset of features. By default, it samples features (where n is the total number of features). The algorithm results in greater tree diversity, which (again) trades a higher bias for a lower variance, generally yielding an overall better model. \n",
     "\n",
-    "#### A forest of such extremely random trees is called an extremely randomized trees⁠12 (or extra-trees for short) ensemble. Once again, this technique trades more bias for a lower variance. It also makes extra-trees classifiers much faster to train than regular random forests, because finding the best possible threshold for each feature at every node is one of the most time-consuming tasks of growing a tree."
+    "#### A forest of such extremely random trees is called an extremely randomized trees⁠12 (or extra-trees for short) ensemble. Once again, this technique trades more bias for a lower variance. It also makes extra-trees classifiers much faster to train than regular random forests, because finding the best possible threshold for each feature at every node is one of the most time-consuming tasks of growing a tree.\n",
+    "\n",
+    "## AdaBoost\n",
+    "\n",
+    "#### One way for a new predictor to correct its predecessor is to pay a bit more attention to the training instances that the predecessor underfit. This results in new predictors focusing more and more on the hard cases. This is the technique used by AdaBoost.\n",
+    "\n",
+    "#### For example, when training an AdaBoost classifier, the algorithm first trains a base classifier (such as a decision tree) and uses it to make predictions on the training set. The algorithm then increases the relative weight of misclassified training instances. Then it trains a second classifier, using the updated weights, and again makes predictions on the training set, updates the instance weights, and so on."
    ]
   }
  ],
