added new visuals

--- a/Machine-Learning-Books/Hands-On-Machine-Learning/Ensemble-Learning.ipynb
+++ b/Machine-Learning-Books/Hands-On-Machine-Learning/Ensemble-Learning.ipynb
@@ -221,7 +221,9 @@
     "\n",
     "#### One way for a new predictor to correct its predecessor is to pay a bit more attention to the training instances that the predecessor underfit. This results in new predictors focusing more and more on the hard cases. This is the technique used by AdaBoost.\n",
     "\n",
-    "#### For example, when training an AdaBoost classifier, the algorithm first trains a base classifier (such as a decision tree) and uses it to make predictions on the training set. The algorithm then increases the relative weight of misclassified training instances. Then it trains a second classifier, using the updated weights, and again makes predictions on the training set, updates the instance weights, and so on."
+    "#### For example, when training an AdaBoost classifier, the algorithm first trains a base classifier (such as a decision tree) and uses it to make predictions on the training set. The algorithm then increases the relative weight of misclassified training instances. Then it trains a second classifier, using the updated weights, and again makes predictions on the training set, updates the instance weights, and so on.\n",
+    "\n",
+    "- There is one important drawback to this sequential learning technique: training cannot be parallelized since each predictor can only be trained after the previous predictor has been trained and evaluated. As a result, it does not scale as well as bagging or pasting."
    ]
   }
  ],
