added new file changes

--- a/Machine-Learning-Books/Hands-On-Machine-Learning/Part-One-Machine-Learning/Unsupervised-Learning.ipynb
+++ b/Machine-Learning-Books/Hands-On-Machine-Learning/Part-One-Machine-Learning/Unsupervised-Learning.ipynb
@@ -8,11 +8,22 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Clustering\n",
+    "\n",
+    "#### The goal is to group similar instances together into clusters. Clustering is a great tool for data analysis, customer segmentation, recommender systems, search engines, image segmentation, semi-supervised learning, dimensionality reduction, and more.\n",
+    "\n",
+    "## Anomaly detection (also called outlier detection)\n",
+    "\n",
+    "#### The objective is to learn what “normal” data looks like, and then use that to detect abnormal instances. These instances are called anomalies, or outliers, while the normal instances are called inliers. Anomaly detection is useful in a wide variety of applications, such as fraud detection, detecting defective products in manufacturing, identifying new trends in time series, or removing outliers from a dataset before training another model, which can significantly improve the performance of the resulting model.\n",
+    "\n",
+    "## Density Estimation\n",
+    "\n",
+    "#### This is the task of estimating the probability density function (PDF) of the random process that generated the dataset. Density estimation is commonly used for anomaly detection: instances located in very low-density regions are likely to be anomalies. It is also useful for data analysis and visualization.\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
