added new file changes

--- a/Machine-Learning-Books/Hands-On-Machine-Learning/Part-One-Machine-Learning/Unsupervised-Learning.ipynb
+++ b/Machine-Learning-Books/Hands-On-Machine-Learning/Part-One-Machine-Learning/Unsupervised-Learning.ipynb
@@ -88,8 +88,71 @@
     "\n",
     "#### Another solution is to run the algorithm multiple times with different random initializations and keep the best solution. The number of random initializations is controlled by the n_init hyperparameter: by default it is equal to 10, which means that the whole algorithm described earlier runs 10 times when you call fit(), and Scikit-Learn keeps the best solution. But how exactly does it know which solution is the best? It uses a performance metric! That metric is called the model’s inertia, which is the sum of the squared distances between the instances and their closest centroids.\n",
     "\n",
-    "#### This technique for choosing the best value for the number of clusters is rather coarse. A more precise (but also more computationally expensive) approach is to use the silhouette score, which is the mean silhouette coefficient over all the instances. An instance’s silhouette coefficient is equal to (b – a) / max(a, b), where a is the mean distance to the other instances in the same cluster (i.e., the mean intra-cluster distance) and b is the mean nearest-cluster distance (i.e., the mean distance to the instances of the next closest cluster, defined as the one that minimizes b, excluding the instance’s own cluster). The silhouette coefficient can vary between –1 and +1. A coefficient close to +1 means that the instance is well inside its own cluster and far from other clusters, while a coefficient close to 0 means that it is close to a cluster boundary; finally, a coefficient close to –1 means that the instance may have been assigned to the wrong cluster.\n",
-    "\n"
+    "#### This technique for choosing the best value for the number of clusters is rather coarse. A more precise (but also more computationally expensive) approach is to use the silhouette score, which is the mean silhouette coefficient over all the instances. An instance’s silhouette coefficient is equal to (b – a) / max(a, b), where a is the mean distance to the other instances in the same cluster (i.e., the mean intra-cluster distance) and b is the mean nearest-cluster distance (i.e., the mean distance to the instances of the next closest cluster, defined as the one that minimizes b, excluding the instance’s own cluster). The silhouette coefficient can vary between –1 and +1. A coefficient close to +1 means that the instance is well inside its own cluster and far from other clusters, while a coefficient close to 0 means that it is close to a cluster boundary; finally, a coefficient close to –1 means that the instance may have been assigned to the wrong cluster.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Using Clustering for Semi-Supervised Learning\n",
+    "\n",
+    "#### Another use case for clustering is in semi-supervised learning, when we have plenty of unlabeled instances and very few labeled instances. In this section, we’ll use the digits dataset, which is a simple MNIST-like dataset containing 1,797 grayscale 8 × 8 images representing the digits 0 to 9. First, let’s load and split the dataset (it’s already shuffled):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.datasets import load_digits\n",
+    "\n",
+    "X_digits, y_digits = load_digits(return_X_y=True)\n",
+    "X_train, y_train = X_digits[:1400], y_digits[:1400]\n",
+    "X_test, y_test = X_digits[1400:], y_digits[1400:]\n",
+    "\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "\n",
+    "n_labeled = 50\n",
+    "log_reg = LogisticRegression(max_iter=10_000)\n",
+    "log_reg.fit(X_train[:n_labeled], y_train[:n_labeled])\n",
+    "\n",
+    "k = 50\n",
+    "kmeans = KMeans(n_clusters=k, random_state=42)\n",
+    "X_digits_dist = kmeans.fit_transform(X_train)\n",
+    "representative_digit_idx = np.argmin(X_digits_dist, axis=0)\n",
+    "X_representative_digits = X_train[representative_digit_idx]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8488664987405542"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_representative_digits = np.array([\n",
+    "    1, 3, 6, 0, 7, 9, 2, 4, 8, 9,\n",
+    "    5, 4, 7, 1, 2, 6, 1, 2, 5, 1,\n",
+    "    4, 1, 3, 3, 8, 8, 2, 5, 6, 9,\n",
+    "    1, 4, 0, 6, 8, 3, 4, 6, 7, 2,\n",
+    "    4, 1, 0, 7, 5, 1, 9, 9, 3, 7\n",
+    "])\n",
+    "\n",
+    "log_reg = LogisticRegression(max_iter=10_000)\n",
+    "log_reg.fit(X_representative_digits, y_representative_digits)\n",
+    "log_reg.score(X_test, y_test)"
    ]
   }
  ],
