added new file changes

--- a/Machine-Learning-Books/Hands-On-Machine-Learning/Part-One-Machine-Learning/Unsupervised-Learning.ipynb
+++ b/Machine-Learning-Books/Hands-On-Machine-Learning/Part-One-Machine-Learning/Unsupervised-Learning.ipynb
@@ -290,7 +290,13 @@
     "#### In short, DBSCAN is a very simple yet powerful algorithm capable of identifying any number of clusters of any shape. It is robust to outliers, and it has just two hyperparameters (eps and min_samples). If the density varies significantly across the clusters, however, or if there’s no sufficiently low-density region around some clusters, DBSCAN can struggle to capture all the clusters properly. Moreover, its computational complexity is roughly O(m2n), so it does not scale well to large datasets.\n",
     "\n",
     "- You may also want to try hierarchical DBSCAN (HDBSCAN), which is implemented in the scikit-learn-contrib project, as it is usually better than DBSCAN at finding clusters of varying densities.\n",
-    "\n"
+    "\n",
+    "## Gaussian Mixtures\n",
+    "\n",
+    "#### A Gaussian mixture model (GMM) is a probabilistic model that assumes that the instances were generated from a mixture of several Gaussian distributions whose parameters are unknown. All the instances generated from a single Gaussian distribution form a cluster that typically looks like an ellipsoid. Each cluster can have a different ellipsoidal shape, size, density, and orientation, just like in Figure 9-11. When you observe an instance, you know it was generated from one of the Gaussian distributions, but you are not told which one, and you do not know what the parameters of these distributions are.\n",
+    "\n",
+    "#### PCA and other dimensionality reduction techniques with an inverse_transform() method\n",
+    "- If you compare the reconstruction error of a normal instance with the reconstruction error of an anomaly, the latter will usually be much larger. This is a simple and often quite efficient anomaly"
    ]
   }
  ],
